fix exercise dialog overflow

--- a/src/components/dialogs/ExerciseFeedbackDialog.module.scss
+++ b/src/components/dialogs/ExerciseFeedbackDialog.module.scss
@@ -84,6 +84,7 @@
   background-color: rgba(255, 255, 255, 0.05);
   color: #cccccc;
   cursor: pointer;
+  box-sizing: border-box;
 }
 
 .fileInput::-webkit-file-upload-button {
@@ -113,6 +114,7 @@
   font-family: inherit;
   font-size: 0.95rem;
   resize: vertical;
+  box-sizing: border-box;
 }
 
 .feedbackTextarea:focus {
@@ -135,6 +137,7 @@
   text-align: center;
   transition: background-color 0.2s ease;
   margin-top: 10px;
+  box-sizing: border-box;
 }
 
 .submitButton:hover {
